--- a/src/fans.css
+++ b/src/fans.css
@@ -1,14 +1,17 @@
+html {
+  height: 100%;
+}
+
 body {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  min-height: 10px;
   background: none;
   color: white;
-  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.7);
   height: 100%;
 }
 
 .product {
-  height: 100%;
+  height: 75%;
   display: table;
   vertical-align: middle;
 }
@@ -19,7 +22,7 @@ body {
 
 h1 {
   font-size: 62px;
-  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 0px 1px 6px rgba(0, 0, 0, 0.5);
 }
 
 #qrcode {
