--- a/src/fans.css
+++ b/src/fans.css
@@ -66,6 +66,19 @@ h1 {
   height: 110px;
 }
 
+.copyright {
+  text-align: left;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 40px;
+}
+.copyright span {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 12px;
+  padding-left: 20px;
+}
 
 /*.full {
   background: url(../images/0.jpg) no-repeat center center fixed;
